YAPL2Parser.py
# Generated from YAPL2.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPL2Parser ( Parser ):

    grammarFileName = "YAPL2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'@'", "'.'", "'let'", "'*'", "'/'", "'+'", 
                     "'-'", "'~'", "'<'", "'<='", "'='", "<INVALID>", "<INVALID>", 
                     "'false'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<-'", "'(*'", "'*)'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "ELSE", 
                      "FALSE", "FI", "IF", "IN", "INHERITS", "ISVOID", "LET", 
                      "LOOP", "POOL", "THEN", "WHILE", "NEW", "NOT", "TRUE", 
                      "STRINGS", "INTEGERS", "TYPEID", "OBJECTID", "ASIGNOPP", 
                      "OPEN_COMMENT", "CLOSE_COMMENT", "COMMENT", "ONE_LINE_COMMENT", 
                      "WHITESPACE" ]

    RULE_program = 0
    RULE_programBlock = 1
    RULE_classDEF = 2
    RULE_feature = 3
    RULE_formal = 4
    RULE_expr = 5

    ruleNames =  [ "program", "programBlock", "classDEF", "feature", "formal", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    CLASS=19
    ELSE=20
    FALSE=21
    FI=22
    IF=23
    IN=24
    INHERITS=25
    ISVOID=26
    LET=27
    LOOP=28
    POOL=29
    THEN=30
    WHILE=31
    NEW=32
    NOT=33
    TRUE=34
    STRINGS=35
    INTEGERS=36
    TYPEID=37
    OBJECTID=38
    ASIGNOPP=39
    OPEN_COMMENT=40
    CLOSE_COMMENT=41
    COMMENT=42
    ONE_LINE_COMMENT=43
    WHITESPACE=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programBlock(self):
            return self.getTypedRuleContext(YAPL2Parser.ProgramBlockContext,0)


        def EOF(self):
            return self.getToken(YAPL2Parser.EOF, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YAPL2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.programBlock()
            self.state = 13
            self.match(YAPL2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDEF(self):
            return self.getTypedRuleContext(YAPL2Parser.ClassDEFContext,0)


        def programBlock(self):
            return self.getTypedRuleContext(YAPL2Parser.ProgramBlockContext,0)


        def EOF(self):
            return self.getToken(YAPL2Parser.EOF, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_programBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramBlock" ):
                listener.enterProgramBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramBlock" ):
                listener.exitProgramBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramBlock" ):
                return visitor.visitProgramBlock(self)
            else:
                return visitor.visitChildren(self)




    def programBlock(self):

        localctx = YAPL2Parser.ProgramBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programBlock)
        try:
            self.state = 20
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [YAPL2Parser.CLASS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 15
                self.classDEF()
                self.state = 16
                self.match(YAPL2Parser.T__0)
                self.state = 17
                self.programBlock()
                pass
            elif token in [YAPL2Parser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 19
                self.match(YAPL2Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDEFContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPL2Parser.CLASS, 0)

        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.TYPEID)
            else:
                return self.getToken(YAPL2Parser.TYPEID, i)

        def INHERITS(self):
            return self.getToken(YAPL2Parser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPL2Parser.RULE_classDEF

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDEF" ):
                listener.enterClassDEF(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDEF" ):
                listener.exitClassDEF(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDEF" ):
                return visitor.visitClassDEF(self)
            else:
                return visitor.visitChildren(self)




    def classDEF(self):

        localctx = YAPL2Parser.ClassDEFContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDEF)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(YAPL2Parser.CLASS)
            self.state = 23
            self.match(YAPL2Parser.TYPEID)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPL2Parser.INHERITS:
                self.state = 24
                self.match(YAPL2Parser.INHERITS)
                self.state = 25
                self.match(YAPL2Parser.TYPEID)


            self.state = 28
            self.match(YAPL2Parser.T__1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YAPL2Parser.OBJECTID:
                self.state = 29
                self.feature()
                self.state = 30
                self.match(YAPL2Parser.T__0)
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(YAPL2Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPL2Parser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodDefContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEID(self):
            return self.getToken(YAPL2Parser.TYPEID, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPL2Parser.ExprContext,0)

        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)
        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.FormalContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDef" ):
                listener.enterMethodDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDef" ):
                listener.exitMethodDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDef" ):
                return visitor.visitMethodDef(self)
            else:
                return visitor.visitChildren(self)


    class FeactureDecalrationContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)
        def TYPEID(self):
            return self.getToken(YAPL2Parser.TYPEID, 0)
        def ASIGNOPP(self):
            return self.getToken(YAPL2Parser.ASIGNOPP, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPL2Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeactureDecalration" ):
                listener.enterFeactureDecalration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeactureDecalration" ):
                listener.exitFeactureDecalration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeactureDecalration" ):
                return visitor.visitFeactureDecalration(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = YAPL2Parser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = YAPL2Parser.MethodDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.match(YAPL2Parser.OBJECTID)
                self.state = 40
                self.match(YAPL2Parser.T__3)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPL2Parser.OBJECTID:
                    self.state = 41
                    self.formal()
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPL2Parser.T__4:
                        self.state = 42
                        self.match(YAPL2Parser.T__4)
                        self.state = 43
                        self.formal()
                        self.state = 48
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 51
                self.match(YAPL2Parser.T__5)
                self.state = 52
                self.match(YAPL2Parser.T__6)
                self.state = 53
                self.match(YAPL2Parser.TYPEID)
                self.state = 54
                self.match(YAPL2Parser.T__1)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(YAPL2Parser.T__2)
                pass

            elif la_ == 2:
                localctx = YAPL2Parser.FeactureDecalrationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(YAPL2Parser.OBJECTID)
                self.state = 59
                self.match(YAPL2Parser.T__6)
                self.state = 60
                self.match(YAPL2Parser.TYPEID)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPL2Parser.ASIGNOPP:
                    self.state = 61
                    self.match(YAPL2Parser.ASIGNOPP)
                    self.state = 62
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)

        def TYPEID(self):
            return self.getToken(YAPL2Parser.TYPEID, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = YAPL2Parser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(YAPL2Parser.OBJECTID)
            self.state = 68
            self.match(YAPL2Parser.T__6)
            self.state = 69
            self.match(YAPL2Parser.TYPEID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPL2Parser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NewExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(YAPL2Parser.NEW, 0)
        def TYPEID(self):
            return self.getToken(YAPL2Parser.TYPEID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewExpr" ):
                listener.enterNewExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewExpr" ):
                listener.exitNewExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewExpr" ):
                return visitor.visitNewExpr(self)
            else:
                return visitor.visitChildren(self)


    class DivideExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivideExpr" ):
                listener.enterDivideExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivideExpr" ):
                listener.exitDivideExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivideExpr" ):
                return visitor.visitDivideExpr(self)
            else:
                return visitor.visitChildren(self)


    class FunctionExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionExpr" ):
                listener.enterFunctionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionExpr" ):
                listener.exitFunctionExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionExpr" ):
                return visitor.visitFunctionExpr(self)
            else:
                return visitor.visitChildren(self)


    class IntegerExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGERS(self):
            return self.getToken(YAPL2Parser.INTEGERS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerExpr" ):
                listener.enterIntegerExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerExpr" ):
                listener.exitIntegerExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegerExpr" ):
                return visitor.visitIntegerExpr(self)
            else:
                return visitor.visitChildren(self)


    class TrueExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(YAPL2Parser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrueExpr" ):
                listener.enterTrueExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrueExpr" ):
                listener.exitTrueExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrueExpr" ):
                return visitor.visitTrueExpr(self)
            else:
                return visitor.visitChildren(self)


    class MethodExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)

        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)
        def TYPEID(self):
            return self.getToken(YAPL2Parser.TYPEID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodExpr" ):
                listener.enterMethodExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodExpr" ):
                listener.exitMethodExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodExpr" ):
                return visitor.visitMethodExpr(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationExpressionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)
        def ASIGNOPP(self):
            return self.getToken(YAPL2Parser.ASIGNOPP, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPL2Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationExpression" ):
                listener.enterDeclarationExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationExpression" ):
                listener.exitDeclarationExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationExpression" ):
                return visitor.visitDeclarationExpression(self)
            else:
                return visitor.visitChildren(self)


    class IfElseExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(YAPL2Parser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)

        def THEN(self):
            return self.getToken(YAPL2Parser.THEN, 0)
        def ELSE(self):
            return self.getToken(YAPL2Parser.ELSE, 0)
        def FI(self):
            return self.getToken(YAPL2Parser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseExpr" ):
                listener.enterIfElseExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseExpr" ):
                listener.exitIfElseExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseExpr" ):
                return visitor.visitIfElseExpr(self)
            else:
                return visitor.visitChildren(self)


    class LessExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessExpr" ):
                listener.enterLessExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessExpr" ):
                listener.exitLessExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessExpr" ):
                return visitor.visitLessExpr(self)
            else:
                return visitor.visitChildren(self)


    class BraketedExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBraketedExpr" ):
                listener.enterBraketedExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBraketedExpr" ):
                listener.exitBraketedExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBraketedExpr" ):
                return visitor.visitBraketedExpr(self)
            else:
                return visitor.visitChildren(self)


    class MultiplyExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplyExpr" ):
                listener.enterMultiplyExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplyExpr" ):
                listener.exitMultiplyExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplyExpr" ):
                return visitor.visitMultiplyExpr(self)
            else:
                return visitor.visitChildren(self)


    class LetExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.OBJECTID)
            else:
                return self.getToken(YAPL2Parser.OBJECTID, i)
        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.TYPEID)
            else:
                return self.getToken(YAPL2Parser.TYPEID, i)
        def IN(self):
            return self.getToken(YAPL2Parser.IN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)

        def ASIGNOPP(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.ASIGNOPP)
            else:
                return self.getToken(YAPL2Parser.ASIGNOPP, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetExpr" ):
                listener.enterLetExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetExpr" ):
                listener.exitLetExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetExpr" ):
                return visitor.visitLetExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRINGS(self):
            return self.getToken(YAPL2Parser.STRINGS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpr" ):
                listener.enterStringExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpr" ):
                listener.exitStringExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringExpr" ):
                return visitor.visitStringExpr(self)
            else:
                return visitor.visitChildren(self)


    class LessEqualExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessEqualExpr" ):
                listener.enterLessEqualExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessEqualExpr" ):
                listener.exitLessEqualExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessEqualExpr" ):
                return visitor.visitLessEqualExpr(self)
            else:
                return visitor.visitChildren(self)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPL2Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(YAPL2Parser.ExprContext,0)

        def NOT(self):
            return self.getToken(YAPL2Parser.NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)
